[package]
name = "proto2json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.byteorder]
version = "1.4.3"

[dependencies.uuid]
version = "1.3.2"
features = ["v4"]

[dependencies.reqwest]
version = "0.11.17"
features = ["blocking"]

[dependencies.protobuf]
version = "3.2.0"

[dependencies.protobuf-parse]
version = "3.2.0"

[dependencies.protobuf-json-mapping]
version = "3.2.0"

[dependencies.itertools]
version = "0.10.5"

[dependencies.serde_json]
version = "1.0.96"

[dependencies.serde]
version = "1.0.160"
features = ["derive"]

[dependencies.tracing]
version = "0.1.37"
features = ["release_max_level_info", "max_level_trace", "tracing-attributes"]

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["fmt", "tracing-log"]

[dependencies.derive_more]
version = "0.99.17"

[dependencies.clap]
version = "4.2.5"
features = ["derive"]

[dependencies.rdkafka]
version = "0.29.0"
features =["cmake-build"]

[dependencies.fnv]
version = "1.0.7"

[dependencies.warp]
version = "0.3.5"
features =["compression"]